--- a/gusestbook/guestbook-ui-svc.yaml
+++ b/gusestbook/guestbook-ui-svc.yaml
@@ -3,8 +3,9 @@ kind: Service
 metadata:
   name: guestbook-ui
 spec:
+  type: NodePort
   ports:
-  - port: 80
-    targetPort: 80
+  - port: 8010
+    targetPort: 8010
   selector:
     app: guestbook-ui
