--- a/gusestbook/guestbook-ui-svc.yaml
+++ b/gusestbook/guestbook-ui-svc.yaml
@@ -1,10 +1,15 @@
-apiVersion: v1
+piVersion: v1
 kind: Service
 metadata:
   name: guestbook-ui
 spec:
   type: NodePort
-  ports:
-  - port: 8010
   selector:
-    app: guestbook-ui
+   app: guestbook-ui
+  ports:
+      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
+    - port: 8010
+      targetPort: 8010
+      # Optional field
+      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
+      nodePort: 30007
