--- a/nginx/nginx.svc.yaml
+++ b/nginx/nginx.svc.yaml
@@ -5,8 +5,14 @@ metadata:
   labels:
     run: my-nginx
 spec:
+  type: NodePort
   ports:
-  - port: 80
+  - port: 8080
+    targetPort: 80
     protocol: TCP
+    name: http
+  - port: 443
+    protocol: TCP
+    name: https
   selector:
     run: my-nginx
