--- a/Apache/deployment.yaml
+++ b/Apache/deployment.yaml
@@ -1,22 +1,21 @@
-apiVersion: apps/v1
+piVersion: apps/v1
 kind: Deployment
 metadata:
-  name: httpd-deployment-devops
-  namespace: httpd-namespace-devops
+  name: apache
   labels:
-    app: httpd_app_devops
+    app: apache
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: httpd_app_devops
+      app: apache
   template:
     metadata:
       labels:
-        app: httpd_app_devops
+        app: apache
     spec:
       containers:
-        - name: httpd-container-devops
-          image: httpd:latest
-          ports:
-            - containerPort: 80
+      - name: apache
+        image: ubuntu/apache2
+        ports:
+        - containerPort: 80
