--- a/Apache/service.yaml
+++ b/Apache/service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name:  httpd-service-devops
-  namespace:  httpd-namespace-devops
+  name: apache-service
 spec:
-  type: NodePort
   selector:
-    app: httpd_app_devops
+    app: apache
+  type: NodePort
   ports:
-    - port: 80
-      targetPort: 80
-      nodePort: 30004
+  - protocol: TCP
+    port: 80
+    targetPort: 80
