--- a/Apache/apache-deployment.yaml
+++ b/Apache/apache-deployment.yaml
@@ -1,21 +1,22 @@
-apiVersion: v1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: apache
+  name: httpd-deployment-nautilus
+  namespace: httpd-namespace-nautilus
   labels:
-    app: apache
+    app: httpd_app_nautilus
 spec:
-  replicas: 1
+  replicas: 4
   selector:
     matchLabels:
-      app: apache
+      app: httpd_app_nautilus
   template:
     metadata:
       labels:
-        app: apache
+        app: httpd_app_nautilus
     spec:
       containers:
-      - name: apache
-        image: ubuntu/apache2
-        ports:
-        - containerPort: 80
+        - name: httpd-container-nautilus
+          image: httpd:latest
+          ports:
+            - containerPort: 80
