--- a/Apache/service.yaml
+++ b/Apache/service.yaml
@@ -1,12 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: apache-service
+  name: httpd-service-nautilus
+  namespace: httpd-namespace-nautilus
 spec:
-  selector:
-    app: apache
   type: NodePort
+  selector:
+    app: httpd_app_nautilus
   ports:
-  - protocol: TCP
-    port: 8090
-    targetPort: 8090
+    - port: 80
+      targetPort: 80
+      nodePort: 30004
