--- a/Jenkins/service.yaml
+++ b/Jenkins/service.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: Jenkins-service
+  name: jenkins-service
   namespace: jenkins
 spec:
   type: NodePort
   selector:
-    app: Jenkins
+    app: jenkins
   ports:
     - port: 8080
       targetPort: 8080
