--- a/ingress/apple.yaml
+++ b/ingress/apple.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: apple-app
@@ -12,7 +12,7 @@ spec:
         - "-text=apple"
 
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: apple-service
