--- a/ingress/banana.yaml
+++ b/ingress/banana.yaml
@@ -1,4 +1,4 @@
-apiVersion: apps/v1
+apiVersion: v1
 kind: Pod
 metadata:
   name: banana-app
@@ -12,7 +12,7 @@ spec:
         - "-text=banana"
 
 ---
-apiVersion: apps/v1
+apiVersion: v1
 kind: Service
 metadata:
   name: banana-service
