--- a/ingress/banana.yaml
+++ b/ingress/banana.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: banana-app
-      image: hashicorp/http-echo
+      image: hashicorp/http-echo:latest
       args:
         - "-text=banana"
 
