--- a/ingress/apple.yaml
+++ b/ingress/apple.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   containers:
     - name: apple-app
-      image: hashicorp/http-echo
+      image: hashicorp/http-echo:latest
       args:
         - "-text=apple"
 
