--- a/ingress/ingress.yaml
+++ b/ingress/ingress.yaml
@@ -1,7 +1,7 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: example-ingress
+  name: ingress-example
   annotations:
     ingress.kubernetes.io/rewrite-target: /
 spec:
