--- a/ingress/aks-helloworld-one.yaml
+++ b/ingress/aks-helloworld-one.yaml
@@ -26,7 +26,7 @@ kind: Service
 metadata:
   name: aks-helloworld-one  
 spec:
-  type: ClusterIP
+  type: Nodeport
   ports:
   - port: 8081
   selector:
