--- a/ingress/aks-helloworld-two.yaml
+++ b/ingress/aks-helloworld-two.yaml
@@ -26,7 +26,7 @@ kind: Service
 metadata:
   name: aks-helloworld-two  
 spec:
-  type: Nodeport
+  type: ClusterIP
   ports:
   - port: 8081
   selector:
