--- a/wordpress/mysql-secret.yaml
+++ b/wordpress/mysql-secret.yaml
@@ -2,6 +2,6 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: mysql-secret
-type: kubernetes.io/basic-auth
+type: kubernetes.io
 stringData:
   password: test1234
