--- a/wordpress/wordpress-deployment.yaml
+++ b/wordpress/wordpress-deployment.yaml
@@ -26,7 +26,7 @@ spec:
         - name: WORDPRESS_DB_PASSWORD
           valueFrom:
             secretKeyRef:
-              name: mysql-pass
+              name: mysql-secret
               key: password
         ports:
         - containerPort: 80
