--- a/Apache/service.yaml
+++ b/Apache/service.yaml
@@ -1,13 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: httpd-service-nautilus
-  namespace: httpd-namespace-nautilus
+  name: apache-service
 spec:
-  type: NodePort
   selector:
-    app: httpd_app_nautilus
+    app: apache
+  type: NodePort
   ports:
-    - port: 8020
-      targetPort: 8020
-      nodePort: 30004
+  - protocol: TCP
+    port: 80
+    targetPort: 80
