--- a/jenkins/volume.yaml
+++ b/jenkins/volume.yaml
@@ -23,6 +23,14 @@ spec:
     - ReadWriteOnce
   local:
     path: /mnt
+    nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - minikube
   
 ---
 apiVersion: v1
