--- a/jenkins/volume.yaml
+++ b/jenkins/volume.yaml
@@ -21,6 +21,17 @@ spec:
     storage: 10Gi
   accessModes:
     - ReadWriteOnce
+  local:
+    path: /mnt
+    nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - minikube
+  
   
 ---
 apiVersion: v1
